// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptimizeForCharacter basic test 1`] = `
Object {
  "elapsed": 381.7612999999999,
  "results": Array [
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "White Robes",
      "dps": Object {
        "animationTime": 5.214,
        "baseDmg": 10796.81787109375,
        "chargeTime": 1.2787809523809524,
        "comboDamage": 570220.9796803711,
        "dps": 87823.8437215823,
        "modifiedDamage": 63161.384545898436,
      },
      "helm": "Magepower Shishak",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.4398120000000008,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.3352380952380952,
        "comboDamage": 262376.3643029649,
        "dps": 69502.75034334784,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Steel Mask",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 21900.35722477064,
        "chargeTime": 0.14095238095238094,
        "comboDamage": 100358.38698251145,
        "dps": 65127.50700348395,
        "modifiedDamage": 85411.39317660549,
      },
      "helm": "Steel Mask",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "White Robes",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 10467.14404296875,
        "chargeTime": 0.4693333333333334,
        "comboDamage": 132019.86040571253,
        "dps": 58744.699120673366,
        "modifiedDamage": 61232.79265136719,
      },
      "helm": "Magepower Shishak",
      "weapon": "Excalibur",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.8131140000000006,
        "baseDmg": 9642.95947265625,
        "chargeTime": 0.40929523809523805,
        "comboDamage": 227812.9503777715,
        "dps": 53953.30900719128,
        "modifiedDamage": 37607.54194335938,
      },
      "helm": "Steel Mask",
      "weapon": "Kumbha",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 3.7288200000000007,
        "baseDmg": 9148.44873046875,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 190351.47998450394,
        "dps": 45894.778823347806,
        "modifiedDamage": 35678.95004882813,
      },
      "helm": "Steel Mask",
      "weapon": "Masamune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.92252,
        "baseDmg": 11373.7470703125,
        "chargeTime": 0.4586666666666666,
        "comboDamage": 108456.13949350783,
        "dps": 45547.09675295279,
        "modifiedDamage": 44357.613574218754,
      },
      "helm": "Steel Mask",
      "weapon": "Tournesol",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 8571.51953125,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 130041.1971226875,
        "dps": 39351.29748364683,
        "modifiedDamage": 33428.926171875,
      },
      "helm": "Steel Mask",
      "weapon": "Muramasa",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 7912.171875,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 120038.02811325001,
        "dps": 36324.27460028938,
        "modifiedDamage": 30857.4703125,
      },
      "helm": "Steel Mask",
      "weapon": "Ame-no-Murakumo",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 9642.95947265625,
        "chargeTime": 0.4586666666666666,
        "comboDamage": 81083.06387122501,
        "dps": 36251.483091279675,
        "modifiedDamage": 37607.54194335938,
      },
      "helm": "Steel Mask",
      "weapon": "Ragnarok",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.9466040000000002,
        "baseDmg": 8489.10107421875,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 80949.14759298049,
        "dps": 34181.11170126892,
        "modifiedDamage": 33107.49418945313,
      },
      "helm": "Steel Mask",
      "weapon": "Simha",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 8983.61181640625,
        "chargeTime": 0.4586666666666666,
        "comboDamage": 75538.922751825,
        "dps": 33772.74920469645,
        "modifiedDamage": 35036.08608398437,
      },
      "helm": "Steel Mask",
      "weapon": "Ultima Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 103782.87847291408,
        "dps": 31405.362414833526,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Steel Mask",
      "weapon": "Yakei",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.0063000000000004,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.39695238095238095,
        "comboDamage": 99336.68986198244,
        "dps": 29188.752035540663,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Steel Mask",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 7582.498046875,
        "chargeTime": 0.4586666666666666,
        "comboDamage": 63757.6228731,
        "dps": 28505.439695707093,
        "modifiedDamage": 29571.7423828125,
      },
      "helm": "Steel Mask",
      "weapon": "Save the Queen",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.7226228000000001,
        "baseDmg": 7582.498046875,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 59484.387811814064,
        "dps": 27741.20814492073,
        "modifiedDamage": 29571.7423828125,
      },
      "helm": "Steel Mask",
      "weapon": "Karkata",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 8159.42724609375,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 54813.62881777149,
        "dps": 27476.328210862648,
        "modifiedDamage": 31821.766259765627,
      },
      "helm": "Steel Mask",
      "weapon": "Durandal",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 5851.71044921875,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 88778.12495875782,
        "dps": 26864.828089797353,
        "modifiedDamage": 22821.670751953126,
      },
      "helm": "Steel Mask",
      "weapon": "Kiku-ichimonji",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 7829.75341796875,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 52598.93674432617,
        "dps": 26366.173535676277,
        "modifiedDamage": 30536.038330078125,
      },
      "helm": "Steel Mask",
      "weapon": "Stoneblade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.4586666666666666,
        "comboDamage": 57520.46411377501,
        "dps": 25716.864073300967,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Steel Mask",
      "weapon": "Claymore",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 7417.6611328125,
        "chargeTime": 0.4586666666666666,
        "comboDamage": 49830.57165251953,
        "dps": 24669.495420222946,
        "modifiedDamage": 28928.87841796875,
      },
      "helm": "Steel Mask",
      "weapon": "Defender",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 5109.9443359375,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 77524.55982314063,
        "dps": 23459.427346020224,
        "modifiedDamage": 19928.78291015625,
      },
      "helm": "Steel Mask",
      "weapon": "Murasame",
    },
    Object {
      "accessory": "Amber Armlet",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.377954,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.3475809523809524,
        "comboDamage": 40237.54811680957,
        "dps": 23318.883260688766,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Steel Mask",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 45954.86052399024,
        "dps": 23035.70951011717,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Steel Mask",
      "weapon": "Deathbringer",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.39695238095238095,
        "comboDamage": 66270.99468752345,
        "dps": 21785.3914107357,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Steel Mask",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 6428.6396484375,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 43186.4954321836,
        "dps": 21648.016166134206,
        "modifiedDamage": 25071.69462890625,
      },
      "helm": "Steel Mask",
      "weapon": "Runeblade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 6016.54736328125,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 40418.130340376956,
        "dps": 20260.322822151244,
        "modifiedDamage": 23464.534716796876,
      },
      "helm": "Steel Mask",
      "weapon": "Diamond Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 4120.9228515625,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 62519.80630898438,
        "dps": 18918.89302098405,
        "modifiedDamage": 16071.59912109375,
      },
      "helm": "Steel Mask",
      "weapon": "Magoroku",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 37096.09223020898,
        "dps": 18595.090809371686,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Steel Mask",
      "weapon": "Bastard Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 5027.52587890625,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 33774.05412004102,
        "dps": 16929.85879659214,
        "modifiedDamage": 19607.350927734376,
      },
      "helm": "Steel Mask",
      "weapon": "Platinum Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 4533.01513671875,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 30452.01600987305,
        "dps": 15264.62678381258,
        "modifiedDamage": 17678.759033203125,
      },
      "helm": "Steel Mask",
      "weapon": "Icebrand",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 3296.73828125,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 50015.845047187504,
        "dps": 15135.11441678724,
        "modifiedDamage": 12857.279296875,
      },
      "helm": "Steel Mask",
      "weapon": "Kogarasumaru",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 4203.34130859375,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 28237.323936427736,
        "dps": 14154.472108626213,
        "modifiedDamage": 16393.031103515626,
      },
      "helm": "Steel Mask",
      "weapon": "Demonsbane",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 3708.83056640625,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 24915.285826259766,
        "dps": 12489.240095846657,
        "modifiedDamage": 14464.439208984375,
      },
      "helm": "Steel Mask",
      "weapon": "Flametongue",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 3296.73828125,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 22146.920734453124,
        "dps": 11101.546751863694,
        "modifiedDamage": 12857.279296875,
      },
      "helm": "Steel Mask",
      "weapon": "Lohengrin",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 3131.9013671875,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 21039.57469773047,
        "dps": 10546.46941427051,
        "modifiedDamage": 12214.41533203125,
      },
      "helm": "Steel Mask",
      "weapon": "Blood Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 2142.8798828125,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 32510.299280671876,
        "dps": 9837.824370911707,
        "modifiedDamage": 8357.23154296875,
      },
      "helm": "Steel Mask",
      "weapon": "Osafune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 2884.64599609375,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 19378.555642646486,
        "dps": 9713.853407880733,
        "modifiedDamage": 11250.119384765625,
      },
      "helm": "Steel Mask",
      "weapon": "Ancient Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 2472.5537109375,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 16610.190550839845,
        "dps": 8326.160063897772,
        "modifiedDamage": 9642.95947265625,
      },
      "helm": "Steel Mask",
      "weapon": "Zwill Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 2060.46142578125,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 13841.825459033204,
        "dps": 6938.46671991481,
        "modifiedDamage": 8035.799560546875,
      },
      "helm": "Steel Mask",
      "weapon": "Iron Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.39695238095238095,
        "comboDamage": 12734.479422310547,
        "dps": 6463.368154600909,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Steel Mask",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.8858800000000002,
        "baseDmg": 1318.6953125,
        "chargeTime": 0.5452190476190477,
        "comboDamage": 20006.338018875,
        "dps": 5830.883265453399,
        "modifiedDamage": 5142.911718750001,
      },
      "helm": "Steel Mask",
      "weapon": "Kotetsu",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 1648.369140625,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 11073.460367226562,
        "dps": 5550.773375931847,
        "modifiedDamage": 6428.6396484375,
      },
      "helm": "Steel Mask",
      "weapon": "Longsword",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6608071999999998,
        "baseDmg": 1338.886467889908,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 8742.892217609173,
        "dps": 4535.932947681906,
        "modifiedDamage": 5221.657224770642,
      },
      "helm": "Steel Mask",
      "weapon": "Dagger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.39695238095238095,
        "comboDamage": 7751.422257058594,
        "dps": 3934.2240941049017,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Steel Mask",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.573302,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.4216380952380952,
        "comboDamage": 7751.422257058594,
        "dps": 3885.5413631522933,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Steel Mask",
      "weapon": "Broadsword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.39695238095238095,
        "comboDamage": 519.52265625,
        "dps": 325.3213198130367,
        "modifiedDamage": 440.2734375,
      },
      "helm": "Steel Mask",
      "weapon": "Bonebreaker",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 1.12890625,
        "chargeTime": 0.2735238095238095,
        "comboDamage": 5.98771875,
        "dps": 4.063537155829886,
        "modifiedDamage": 4.4027343750000005,
      },
      "helm": "Steel Mask",
      "weapon": "Excalipur",
    },
  ],
}
`;

exports[`OptimizeForCharacter basic test 2`] = `
Object {
  "elapsed": 318.9714999999999,
  "results": Array [
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "White Robes",
      "dps": Object {
        "animationTime": 5.214,
        "baseDmg": 10796.81787109375,
        "chargeTime": 1.3089523809523809,
        "comboDamage": 570220.9796803711,
        "dps": 87417.62109830338,
        "modifiedDamage": 63161.384545898436,
      },
      "helm": "Magepower Shishak",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.36756,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.34285714285714286,
        "comboDamage": 262376.3643029649,
        "dps": 70713.44115797353,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Winged Helm",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 21679.366972477063,
        "chargeTime": 0.14095238095238094,
        "comboDamage": 99345.69915137615,
        "dps": 64470.323923946205,
        "modifiedDamage": 84549.53119266055,
      },
      "helm": "Steel Mask",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 11388.1405859375,
        "chargeTime": 0.4313904761904762,
        "comboDamage": 172773.03392912063,
        "dps": 56160.22701187916,
        "modifiedDamage": 44413.74828515625,
      },
      "helm": "Winged Helm",
      "weapon": "Vrscika",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.72882,
        "baseDmg": 9642.95947265625,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 227812.9503777715,
        "dps": 54926.94341821396,
        "modifiedDamage": 37607.54194335938,
      },
      "helm": "Winged Helm",
      "weapon": "Kumbha",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 3.36756,
        "baseDmg": 9102.840087890625,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 189402.50241785747,
        "dps": 49774.67602931887,
        "modifiedDamage": 35501.07634277344,
      },
      "helm": "Magepower Shishak",
      "weapon": "Masamune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 8528.787109375,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 129392.89021790627,
        "dps": 41974.18161104246,
        "modifiedDamage": 33262.2697265625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Muramasa",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 10617.51453125,
        "chargeTime": 0.4313904761904762,
        "comboDamage": 89277.63425037602,
        "dps": 40407.97164870773,
        "modifiedDamage": 41408.306671875005,
      },
      "helm": "Winged Helm",
      "weapon": "Scorpion Tail",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 7872.7265625,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 119439.59097037501,
        "dps": 38745.39841019304,
        "modifiedDamage": 30703.63359375,
      },
      "helm": "Magepower Shishak",
      "weapon": "Ame-no-Murakumo",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 10275.0140625,
        "chargeTime": 0.39344761904761905,
        "comboDamage": 74816.42163459751,
        "dps": 36910.6621224899,
        "modifiedDamage": 40072.554843750004,
      },
      "helm": "Winged Helm",
      "weapon": "Golden Axe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 9418.762890625,
        "chargeTime": 0.39344761904761905,
        "comboDamage": 68581.71983171438,
        "dps": 33834.773612282406,
        "modifiedDamage": 36733.1752734375,
      },
      "helm": "Winged Helm",
      "weapon": "Greataxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 6806.628173828125,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 103265.47969313673,
        "dps": 33498.62570881274,
        "modifiedDamage": 26545.84987792969,
      },
      "helm": "Magepower Shishak",
      "weapon": "Yakei",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 8562.51171875,
        "chargeTime": 0.4313904761904762,
        "comboDamage": 71998.09213740002,
        "dps": 32587.07391024817,
        "modifiedDamage": 33393.795703125004,
      },
      "helm": "Winged Helm",
      "weapon": "Morning Star",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.0063000000000004,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 99336.68986198244,
        "dps": 29110.54638484113,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Winged Helm",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 5822.537353515625,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 88335.53082183986,
        "dps": 28655.450907538605,
        "modifiedDamage": 22707.89567871094,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kiku-ichimonji",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 7535.0103125,
        "chargeTime": 0.39344761904761905,
        "comboDamage": 54865.375865371505,
        "dps": 27067.818889825925,
        "modifiedDamage": 29386.54021875,
      },
      "helm": "Winged Helm",
      "weapon": "Francisca",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 5084.46923828125,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 77138.06916836719,
        "dps": 25023.069806583004,
        "modifiedDamage": 19829.430029296876,
      },
      "helm": "Magepower Shishak",
      "weapon": "Murasame",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 6935.6344921875,
        "chargeTime": 0.39344761904761905,
        "comboDamage": 50501.084603353316,
        "dps": 24914.69693268068,
        "modifiedDamage": 27048.97451953125,
      },
      "helm": "Winged Helm",
      "weapon": "Hammerhead",
    },
    Object {
      "accessory": "Amber Armlet",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.3873199999999999,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.3475809523809524,
        "comboDamage": 40237.54811680957,
        "dps": 23192.994425179237,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Steel Mask",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 66270.99468752345,
        "dps": 21720.110554291616,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Winged Helm",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 5651.257734375,
        "chargeTime": 0.4313904761904762,
        "comboDamage": 47518.740810683994,
        "dps": 21507.468780763786,
        "modifiedDamage": 22039.905164062497,
      },
      "helm": "Winged Helm",
      "weapon": "Sledgehammer",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Water Bombs",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6507.508906249999,
        "chargeTime": 0.40380952380952384,
        "comboDamage": 38068.9271015625,
        "dps": 21104.73783349558,
        "modifiedDamage": 38068.9271015625,
      },
      "helm": "Winged Helm",
      "weapon": "Fumarole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 4100.37841796875,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 62208.120297070316,
        "dps": 20179.895005308877,
        "modifiedDamage": 15991.475830078125,
      },
      "helm": "Magepower Shishak",
      "weapon": "Magoroku",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8733.761953125,
        "chargeTime": 0.40380952380952384,
        "comboDamage": 34061.6716171875,
        "dps": 18883.186482601308,
        "modifiedDamage": 34061.6716171875,
      },
      "helm": "Winged Helm",
      "weapon": "Makara",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8220.01125,
        "chargeTime": 0.40380952380952384,
        "comboDamage": 32058.043875,
        "dps": 17772.41080715417,
        "modifiedDamage": 32058.043875,
      },
      "helm": "Winged Helm",
      "weapon": "Volcano",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 4623.756328125,
        "chargeTime": 0.39344761904761905,
        "comboDamage": 33667.38973556888,
        "dps": 16609.797955120455,
        "modifiedDamage": 18032.649679687504,
      },
      "helm": "Winged Helm",
      "weapon": "Slasher",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7620.635429687501,
        "chargeTime": 0.40380952380952384,
        "comboDamage": 29720.478175781256,
        "dps": 16476.50585246585,
        "modifiedDamage": 29720.478175781256,
      },
      "helm": "Winged Helm",
      "weapon": "Caldera",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 3280.302734375,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 49766.496237656254,
        "dps": 16143.916004247101,
        "modifiedDamage": 12793.1806640625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kogarasumaru",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7021.259609375,
        "chargeTime": 0.40380952380952384,
        "comboDamage": 27382.912476562502,
        "dps": 15180.600897777522,
        "modifiedDamage": 27382.912476562502,
      },
      "helm": "Winged Helm",
      "weapon": "Tumulus",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 3596.254921875,
        "chargeTime": 0.4313904761904762,
        "comboDamage": 30239.198697708005,
        "dps": 13686.571042304231,
        "modifiedDamage": 14025.394195312501,
      },
      "helm": "Winged Helm",
      "weapon": "War Hammer",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6165.008437500001,
        "chargeTime": 0.40380952380952384,
        "comboDamage": 24043.532906250002,
        "dps": 13329.30810536563,
        "modifiedDamage": 24043.532906250002,
      },
      "helm": "Winged Helm",
      "weapon": "Hornito",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 3082.5042187500003,
        "chargeTime": 0.39344761904761905,
        "comboDamage": 22444.926490379254,
        "dps": 11073.19863674697,
        "modifiedDamage": 12021.766453125001,
      },
      "helm": "Winged Helm",
      "weapon": "Broadaxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 2132.19677734375,
        "chargeTime": 0.43763809523809527,
        "comboDamage": 32348.222554476568,
        "dps": 10493.545402760616,
        "modifiedDamage": 8315.567431640626,
      },
      "helm": "Magepower Shishak",
      "weapon": "Osafune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.778016,
        "baseDmg": 2055.0028125,
        "chargeTime": 0.4313904761904762,
        "comboDamage": 17279.542112976,
        "dps": 7820.897738459559,
        "modifiedDamage": 8014.51096875,
      },
      "helm": "Winged Helm",
      "weapon": "Iron Hammer",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 2060.46142578125,
        "chargeTime": 0.4313904761904762,
        "comboDamage": 13841.825459033204,
        "dps": 6946.439239808794,
        "modifiedDamage": 8035.799560546875,
      },
      "helm": "Winged Helm",
      "weapon": "Iron Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 12734.479422310547,
        "dps": 6472.892732194044,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Winged Helm",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 1312.12109375,
        "chargeTime": 0.5702095238095237,
        "comboDamage": 19906.5984950625,
        "dps": 6191.307501222041,
        "modifiedDamage": 5117.272265625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kotetsu",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1648.369140625,
        "chargeTime": 0.4313904761904762,
        "comboDamage": 11073.460367226562,
        "dps": 5557.1513918470355,
        "modifiedDamage": 6428.6396484375,
      },
      "helm": "Winged Helm",
      "weapon": "Longsword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.633512,
        "baseDmg": 1455.6269921875,
        "chargeTime": 0.39344761904761905,
        "comboDamage": 10598.993064901315,
        "dps": 5229.010467352736,
        "modifiedDamage": 5676.94526953125,
      },
      "helm": "Winged Helm",
      "weapon": "Handaxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 7751.422257058594,
        "dps": 3940.0216630746354,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Winged Helm",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 519.52265625,
        "dps": 323.4693957913306,
        "modifiedDamage": 440.2734375,
      },
      "helm": undefined,
      "weapon": "Bonebreaker",
    },
  ],
}
`;

exports[`OptimizeForCharacter basic test 3`] = `
Object {
  "elapsed": 168.29219999999987,
  "results": Array [
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "White Robes",
      "dps": Object {
        "animationTime": 5.615400000000001,
        "baseDmg": 10003.01416015625,
        "chargeTime": 1.2787809523809524,
        "comboDamage": 528297.1892516601,
        "dps": 76629.43472193155,
        "modifiedDamage": 58517.63283691406,
      },
      "helm": "Magepower Shishak",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.36756,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.34285714285714286,
        "comboDamage": 262376.3643029649,
        "dps": 70713.44115797353,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Giant's Helmet",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6,
        "baseDmg": 21568.871846330276,
        "chargeTime": 0.14095238095238094,
        "comboDamage": 98839.35523580849,
        "dps": 56773.152624507056,
        "modifiedDamage": 84118.60020068807,
      },
      "helm": "Giant's Helmet",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Black Robes",
      "dps": Object {
        "animationTime": 1.9867439999999998,
        "baseDmg": 8500.038990825688,
        "chargeTime": 0.3082666666666667,
        "comboDamage": 127967.27780316882,
        "dps": 55758.90328607137,
        "modifiedDamage": 49725.22809633028,
      },
      "helm": "Magepower Shishak",
      "weapon": "Yagyu Darkblade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.72882,
        "baseDmg": 9642.95947265625,
        "chargeTime": 0.41874285714285714,
        "comboDamage": 227812.9503777715,
        "dps": 54926.94341821396,
        "modifiedDamage": 37607.54194335938,
      },
      "helm": "Giant's Helmet",
      "weapon": "Kumbha",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 3.36756,
        "baseDmg": 9102.840087890625,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 189402.50241785747,
        "dps": 49898.56514697648,
        "modifiedDamage": 35501.07634277344,
      },
      "helm": "Magepower Shishak",
      "weapon": "Masamune",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.0991359999999997,
        "baseDmg": 9607.095756880733,
        "chargeTime": 0.27809523809523806,
        "comboDamage": 104844.74152541283,
        "dps": 44103.720262998024,
        "modifiedDamage": 37467.67345183486,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mesa",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 8528.787109375,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 129392.89021790627,
        "dps": 42103.217191279284,
        "modifiedDamage": 33262.2697265625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Muramasa",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 7872.7265625,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 119439.59097037501,
        "dps": 38864.50817656549,
        "modifiedDamage": 30703.63359375,
      },
      "helm": "Magepower Shishak",
      "weapon": "Ame-no-Murakumo",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.62147,
        "baseDmg": 9795.470183486237,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 70404.6088978211,
        "dps": 37287.87758892158,
        "modifiedDamage": 38202.33371559633,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mina",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.818156,
        "baseDmg": 8194.287557339449,
        "chargeTime": 0.27809523809523806,
        "comboDamage": 71467.4360241227,
        "dps": 34092.97260048929,
        "modifiedDamage": 31957.72147362385,
      },
      "helm": "Giant's Helmet",
      "weapon": "Koga Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.818156,
        "baseDmg": 8194.287557339449,
        "chargeTime": 0.27809523809523806,
        "comboDamage": 71467.4360241227,
        "dps": 34092.97260048929,
        "modifiedDamage": 31957.72147362385,
      },
      "helm": "Giant's Helmet",
      "weapon": "Iga Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 6806.628173828125,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 103265.47969313673,
        "dps": 33601.60602765558,
        "modifiedDamage": 26545.84987792969,
      },
      "helm": "Magepower Shishak",
      "weapon": "Yakei",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 8476.849197247706,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 55353.594687729346,
        "dps": 30686.487081502313,
        "modifiedDamage": 33059.71186926605,
      },
      "helm": "Giant's Helmet",
      "weapon": "Shikari Nagasa",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 8194.287557339449,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 53508.47486480504,
        "dps": 29663.604178785572,
        "modifiedDamage": 31957.72147362385,
      },
      "helm": "Giant's Helmet",
      "weapon": "Zwill Crossblade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 5822.537353515625,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 88335.53082183986,
        "dps": 28743.542505584894,
        "modifiedDamage": 22707.89567871094,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kiku-ichimonji",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 7817.53870412844,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 51048.31510090596,
        "dps": 28299.76030849658,
        "modifiedDamage": 30488.400946100915,
      },
      "helm": "Giant's Helmet",
      "weapon": "Platinum Dagger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.1869300000000003,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 99336.68986198244,
        "dps": 27647.089368802637,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Giant's Helmet",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 7440.789850917431,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 48588.15533700688,
        "dps": 26935.91643820759,
        "modifiedDamage": 29019.08041857798,
      },
      "helm": "Giant's Helmet",
      "weapon": "Orichalcum Dirk",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6575959999999998,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.3555047619047619,
        "comboDamage": 54106.99728502149,
        "dps": 26877.441163862248,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Giant's Helmet",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 5084.46923828125,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 77138.06916836719,
        "dps": 25099.994864031876,
        "modifiedDamage": 19829.430029296876,
      },
      "helm": "Magepower Shishak",
      "weapon": "Murasame",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 6216.356077981651,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 40592.63610433485,
        "dps": 22503.42385976836,
        "modifiedDamage": 24243.788704128438,
      },
      "helm": "Giant's Helmet",
      "weapon": "Avenger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.7895440000000002,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 66270.99468752345,
        "dps": 20737.946229194597,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Giant's Helmet",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 4100.37841796875,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 62208.120297070316,
        "dps": 20241.931341961194,
        "modifiedDamage": 15991.475830078125,
      },
      "helm": "Magepower Shishak",
      "weapon": "Magoroku",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 5274.483944954128,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 34442.23669458715,
        "dps": 19093.814184045885,
        "modifiedDamage": 20570.4873853211,
      },
      "helm": "Giant's Helmet",
      "weapon": "Gladius",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 3280.302734375,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 49766.496237656254,
        "dps": 16193.545073568954,
        "modifiedDamage": 12793.1806640625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kogarasumaru",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 3767.4885321100915,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 24601.59763899082,
        "dps": 13638.438702889918,
        "modifiedDamage": 14693.205275229357,
      },
      "helm": "Giant's Helmet",
      "weapon": "Chopper",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.34049,
        "baseDmg": 4332.611811926606,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 21644.957407482798,
        "dps": 13467.857774174348,
        "modifiedDamage": 16897.18606651376,
      },
      "helm": "Giant's Helmet",
      "weapon": "Main Gauche",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 2919.803612385321,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 19066.238170217886,
        "dps": 10569.789994739685,
        "modifiedDamage": 11387.234088302752,
      },
      "helm": "Giant's Helmet",
      "weapon": "Assassin's Dagger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 2132.19677734375,
        "chargeTime": 0.4281904761904761,
        "comboDamage": 32348.222554476568,
        "dps": 10525.804297819821,
        "modifiedDamage": 8315.567431640626,
      },
      "helm": "Magepower Shishak",
      "weapon": "Osafune",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 12734.479422310547,
        "dps": 6472.892732194044,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Lordly Robes",
      "dps": Object {
        "animationTime": 2.64504,
        "baseDmg": 1312.12109375,
        "chargeTime": 0.5577142857142857,
        "comboDamage": 19906.5984950625,
        "dps": 6215.462292519541,
        "modifiedDamage": 5117.272265625,
      },
      "helm": "Magepower Shishak",
      "weapon": "Kotetsu",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 1695.3698394495411,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 11070.71893754587,
        "dps": 6137.297416300463,
        "modifiedDamage": 6611.9423738532105,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mage Masher",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5371759999999999,
        "baseDmg": 1318.620986238532,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 8610.559173646787,
        "dps": 4773.453546011471,
        "modifiedDamage": 5142.621846330275,
      },
      "helm": "Giant's Helmet",
      "weapon": "Dagger",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.5612599999999999,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.4060952380952381,
        "comboDamage": 7751.422257058594,
        "dps": 3940.0216630746354,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Giant's Helmet",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Mirage Vest",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.39695238095238095,
        "comboDamage": 519.52265625,
        "dps": 325.3213198130367,
        "modifiedDamage": 440.2734375,
      },
      "helm": undefined,
      "weapon": "Bonebreaker",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": "Dark Shot",
      "armor": "Mirage Vest",
      "dps": Object {
        "animationTime": 1.6,
        "baseDmg": 112.890625,
        "chargeTime": 0.6438095238095238,
        "comboDamage": 479.89804687500003,
        "dps": 213.8764640147496,
        "modifiedDamage": 440.2734375,
      },
      "helm": undefined,
      "weapon": "Altair",
    },
  ],
}
`;

exports[`OptimizeForCharacter basic test 4`] = `
Object {
  "elapsed": 143.07490099999995,
  "results": Array [
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 21900.35722477064,
        "chargeTime": 0.14095238095238094,
        "comboDamage": 100358.38698251145,
        "dps": 65127.50700348395,
        "modifiedDamage": 85411.39317660549,
      },
      "helm": "Thief's Cap",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.071038,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 132089.14314093164,
        "dps": 55420.027187825784,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": "Thief's Cap",
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 3.4478400000000002,
        "baseDmg": 10796.81787109375,
        "chargeTime": 1.1580952380952378,
        "comboDamage": 231409.8385474688,
        "dps": 50241.66137497999,
        "modifiedDamage": 42107.58969726563,
      },
      "helm": "Thief's Cap",
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 2.445678,
        "baseDmg": 9230.8671875,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 106808.09343323439,
        "dps": 38725.81959897197,
        "modifiedDamage": 36000.38203125,
      },
      "helm": "Thief's Cap",
      "weapon": "Kanya",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 8901.193359375,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 63977.0246299336,
        "dps": 31265.605364940504,
        "modifiedDamage": 34714.654101562504,
      },
      "helm": "Thief's Cap",
      "weapon": "Whale Whisker",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 10902.36123853211,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 48471.89806651377,
        "dps": 26370.72174603081,
        "modifiedDamage": 42519.20883027523,
      },
      "helm": "Thief's Cap",
      "weapon": "Dhanusha",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 7500.07958984375,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 53906.5670492959,
        "dps": 26344.167483422094,
        "modifiedDamage": 29250.310400390626,
      },
      "helm": "Thief's Cap",
      "weapon": "Eight-fluted Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 7252.82421875,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 52129.42747624219,
        "dps": 25475.678445507077,
        "modifiedDamage": 28286.014453125,
      },
      "helm": "Thief's Cap",
      "weapon": "Sweep",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Fiery Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7459.510321100917,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 45165.47011668577,
        "dps": 24571.887887316094,
        "modifiedDamage": 43638.13537844036,
      },
      "helm": "Thief's Cap",
      "weapon": "Burning Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 49167.528187819335,
        "dps": 24028.19671564872,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": "Thief's Cap",
      "weapon": "Ivory Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.377954,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.32380952380952377,
        "comboDamage": 40237.54811680957,
        "dps": 23644.61780608321,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": "Thief's Cap",
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.90245,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.3695238095238095,
        "comboDamage": 51791.7888932666,
        "dps": 22795.94451140342,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": "Thief's Cap",
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 6346.22119140625,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 45613.24904171191,
        "dps": 22291.21863981869,
        "modifiedDamage": 24750.262646484374,
      },
      "helm": "Thief's Cap",
      "weapon": "Zephyr Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 9754.744266055046,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 39375.0252299312,
        "dps": 21421.645850480705,
        "modifiedDamage": 38043.502637614685,
      },
      "helm": "Thief's Cap",
      "weapon": "Sagittarius",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 5934.12890625,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 42651.34975328906,
        "dps": 20843.736909960335,
        "modifiedDamage": 23143.102734375,
      },
      "helm": "Thief's Cap",
      "weapon": "Gokuu Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 9467.84002293578,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 38216.93625258027,
        "dps": 20791.59744311362,
        "modifiedDamage": 36924.57608944954,
      },
      "helm": "Thief's Cap",
      "weapon": "Artemis Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 9276.570527522936,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 37444.87693434633,
        "dps": 20371.565171535567,
        "modifiedDamage": 36178.62505733945,
      },
      "helm": "Thief's Cap",
      "weapon": "Perseus Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8989.66628440367,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 36286.78795699541,
        "dps": 19741.51676416849,
        "modifiedDamage": 35059.69850917431,
      },
      "helm": "Thief's Cap",
      "weapon": "Yoichi Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8320.223050458715,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 33584.5803431766,
        "dps": 18271.403813645302,
        "modifiedDamage": 32448.869896788994,
      },
      "helm": "Thief's Cap",
      "weapon": "Traitor's Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 4862.68896484375,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 34950.41160338965,
        "dps": 17080.28441232861,
        "modifiedDamage": 18964.486962890627,
      },
      "helm": "Thief's Cap",
      "weapon": "Six-fluted Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.7619600000000002,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.3695238095238095,
        "comboDamage": 36182.87825358984,
        "dps": 16975.441282696574,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": "Thief's Cap",
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7459.510321100917,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 30110.313411123847,
        "dps": 16381.258591544063,
        "modifiedDamage": 29092.090252293576,
      },
      "helm": "Thief's Cap",
      "weapon": "Giant Stonebow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6216.258600917431,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 25091.92784260321,
        "dps": 13651.048826286722,
        "modifiedDamage": 24243.40854357798,
      },
      "helm": "Thief's Cap",
      "weapon": "Loxley Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 3791.2490234375,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 27249.473453490235,
        "dps": 13316.83191469688,
        "modifiedDamage": 14785.87119140625,
      },
      "helm": "Thief's Cap",
      "weapon": "Iron Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 5642.450114678899,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 22775.749887901376,
        "dps": 12390.952011552563,
        "modifiedDamage": 22005.55544724771,
      },
      "helm": "Thief's Cap",
      "weapon": "Elfin Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 3214.31982421875,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 23102.814449698242,
        "dps": 11290.357492895182,
        "modifiedDamage": 12535.847314453125,
      },
      "helm": "Thief's Cap",
      "weapon": "Musk Stick",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 5068.641628440367,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 19767.70235091743,
        "dps": 10754.449465525027,
        "modifiedDamage": 19767.70235091743,
      },
      "helm": "Thief's Cap",
      "weapon": "Longbow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 2802.2275390625,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 20140.915161275392,
        "dps": 9842.875763036825,
        "modifiedDamage": 10928.68740234375,
      },
      "helm": "Thief's Cap",
      "weapon": "Battle Bamboo",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 3921.0246559633024,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 15827.21602379587,
        "dps": 8610.661567350086,
        "modifiedDamage": 15291.996158256881,
      },
      "helm": "Thief's Cap",
      "weapon": "Killer Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 1813.2060546875,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 13032.356869060548,
        "dps": 6368.919611376769,
        "modifiedDamage": 7071.50361328125,
      },
      "helm": "Thief's Cap",
      "weapon": "Cypress Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 2869.0424311926604,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 11580.889773509174,
        "dps": 6300.484073670795,
        "modifiedDamage": 11189.265481651377,
      },
      "helm": "Thief's Cap",
      "weapon": "Aevis Killer",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.345173,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.3695238095238095,
        "comboDamage": 9470.20263938379,
        "dps": 5522.960436378121,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": "Thief's Cap",
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 2295.233944954128,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 9264.711818807338,
        "dps": 5040.387258936635,
        "modifiedDamage": 8951.4123853211,
      },
      "helm": "Thief's Cap",
      "weapon": "Silver Bow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6608071999999998,
        "baseDmg": 1338.886467889908,
        "chargeTime": 0.26666666666666666,
        "comboDamage": 8742.892217609173,
        "dps": 4535.932947681906,
        "modifiedDamage": 5221.657224770642,
      },
      "helm": "Thief's Cap",
      "weapon": "Dagger",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.733862,
        "baseDmg": 1236.27685546875,
        "chargeTime": 0.3123809523809523,
        "comboDamage": 8885.697865268556,
        "dps": 4342.44518957507,
        "modifiedDamage": 4821.479736328125,
      },
      "helm": "Thief's Cap",
      "weapon": "Oaken Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 1912.6949541284403,
        "chargeTime": 0.4380952380952381,
        "comboDamage": 7720.5931823394485,
        "dps": 4200.3227157805295,
        "modifiedDamage": 7459.510321100917,
      },
      "helm": "Thief's Cap",
      "weapon": "Shortbow",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.345173,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.3695238095238095,
        "comboDamage": 5764.471171798828,
        "dps": 3361.8020047519,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": "Thief's Cap",
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": undefined,
      "armor": "Mirage Vest",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.3695238095238095,
        "comboDamage": 471.09257812500005,
        "dps": 300.15000426653523,
        "modifiedDamage": 440.2734375,
      },
      "helm": undefined,
      "weapon": "Bonebreaker",
    },
  ],
}
`;

exports[`OptimizeForCharacter basic test 5`] = `
Object {
  "elapsed": 183.12000099999977,
  "results": Array [
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.873324,
        "baseDmg": 12610.02392578125,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 262376.3643029649,
        "dps": 60243.99145183236,
        "modifiedDamage": 49179.09331054688,
      },
      "helm": undefined,
      "weapon": "Great Trango",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6,
        "baseDmg": 21789.862098623853,
        "chargeTime": 0.1938095238095238,
        "comboDamage": 99852.0430669438,
        "dps": 55664.79703758481,
        "modifiedDamage": 84980.46218463303,
      },
      "helm": "Steel Mask",
      "weapon": "Seitengrat",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.9817020000000003,
        "baseDmg": 9230.8671875,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 218077.35420778126,
        "dps": 48856.7577388293,
        "modifiedDamage": 36000.38203125,
      },
      "helm": undefined,
      "weapon": "Kanya",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 6.284400000000001,
        "baseDmg": 10796.81787109375,
        "chargeTime": 1.7998095238095237,
        "comboDamage": 380147.3197869141,
        "dps": 47023.437315337804,
        "modifiedDamage": 42107.58969726563,
      },
      "helm": undefined,
      "weapon": "Wyrmhero Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.174888,
        "baseDmg": 11388.1405859375,
        "chargeTime": 0.6065714285714285,
        "comboDamage": 172773.03392912063,
        "dps": 45689.511468430945,
        "modifiedDamage": 44413.74828515625,
      },
      "helm": undefined,
      "weapon": "Vrscika",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 8901.193359375,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 109960.74974594534,
        "dps": 38259.689803388195,
        "modifiedDamage": 34714.654101562504,
      },
      "helm": undefined,
      "weapon": "Whale Whisker",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 10617.51453125,
        "chargeTime": 0.6065714285714285,
        "comboDamage": 89277.63425037602,
        "dps": 34383.48494792649,
        "modifiedDamage": 41408.306671875005,
      },
      "helm": undefined,
      "weapon": "Scorpion Tail",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 7500.07958984375,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 92652.11321186135,
        "dps": 32237.331223225236,
        "modifiedDamage": 29250.310400390626,
      },
      "helm": undefined,
      "weapon": "Eight-fluted Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 10275.0140625,
        "chargeTime": 0.5531428571428572,
        "comboDamage": 74816.42163459751,
        "dps": 31896.370380857898,
        "modifiedDamage": 40072.554843750004,
      },
      "helm": undefined,
      "weapon": "Golden Axe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 7252.82421875,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 89597.64794114063,
        "dps": 31174.562062020002,
        "modifiedDamage": 28286.014453125,
      },
      "helm": undefined,
      "weapon": "Sweep",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 6840.73193359375,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 84506.87248993946,
        "dps": 29403.280126677957,
        "modifiedDamage": 26678.854541015626,
      },
      "helm": undefined,
      "weapon": "Ivory Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 9418.762890625,
        "chargeTime": 0.5531428571428572,
        "comboDamage": 68581.71983171438,
        "dps": 29238.3395157864,
        "modifiedDamage": 36733.1752734375,
      },
      "helm": undefined,
      "weapon": "Greataxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 8562.51171875,
        "chargeTime": 0.6065714285714285,
        "comboDamage": 71998.09213740002,
        "dps": 27728.616893489103,
        "modifiedDamage": 33393.795703125004,
      },
      "helm": undefined,
      "weapon": "Morning Star",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 6346.22119140625,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 78397.94194849806,
        "dps": 27277.741804267505,
        "modifiedDamage": 24750.262646484374,
      },
      "helm": undefined,
      "weapon": "Zephyr Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 5934.12890625,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 73307.16649729689,
        "dps": 25506.45986892546,
        "modifiedDamage": 23143.102734375,
      },
      "helm": undefined,
      "weapon": "Gokuu Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.4879800000000003,
        "baseDmg": 5522.03662109375,
        "chargeTime": 0.5709523809523809,
        "comboDamage": 99336.68986198244,
        "dps": 24473.60057737011,
        "modifiedDamage": 21535.942822265624,
      },
      "helm": undefined,
      "weapon": "Treaty-Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.765974,
        "baseDmg": 8054.23974609375,
        "chargeTime": 0.49971428571428567,
        "comboDamage": 54106.99728502149,
        "dps": 23881.042077226262,
        "modifiedDamage": 31411.535009765626,
      },
      "helm": undefined,
      "weapon": "Unarmed",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 7535.0103125,
        "chargeTime": 0.5531428571428572,
        "comboDamage": 54865.375865371505,
        "dps": 23390.67161262912,
        "modifiedDamage": 29386.54021875,
      },
      "helm": undefined,
      "weapon": "Francisca",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 6935.6344921875,
        "chargeTime": 0.5531428571428572,
        "comboDamage": 50501.084603353316,
        "dps": 21530.050007079077,
        "modifiedDamage": 27048.97451953125,
      },
      "helm": undefined,
      "weapon": "Hammerhead",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 4862.68896484375,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 60071.15032417384,
        "dps": 20901.12683703614,
        "modifiedDamage": 18964.486962890627,
      },
      "helm": undefined,
      "weapon": "Six-fluted Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Water Bombs",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6507.508906249999,
        "chargeTime": 0.5690666666666666,
        "comboDamage": 38068.9271015625,
        "dps": 19333.488167776188,
        "modifiedDamage": 38068.9271015625,
      },
      "helm": undefined,
      "weapon": "Fumarole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 3.0303839999999997,
        "baseDmg": 4368.17822265625,
        "chargeTime": 0.5709523809523809,
        "comboDamage": 66270.99468752345,
        "dps": 18401.778583648425,
        "modifiedDamage": 17035.895068359376,
      },
      "helm": undefined,
      "weapon": "Sword of Kings",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 5651.257734375,
        "chargeTime": 0.6065714285714285,
        "comboDamage": 47518.740810683994,
        "dps": 18300.8871497028,
        "modifiedDamage": 22039.905164062497,
      },
      "helm": undefined,
      "weapon": "Sledgehammer",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8733.761953125,
        "chargeTime": 0.5690666666666666,
        "comboDamage": 34061.6716171875,
        "dps": 17298.38415011554,
        "modifiedDamage": 34061.6716171875,
      },
      "helm": undefined,
      "weapon": "Makara",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 3791.2490234375,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 46835.134151050785,
        "dps": 16295.793805146819,
        "modifiedDamage": 14785.87119140625,
      },
      "helm": undefined,
      "weapon": "Iron Pole",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 8220.01125,
        "chargeTime": 0.5690666666666666,
        "comboDamage": 32058.043875,
        "dps": 16280.832141285213,
        "modifiedDamage": 32058.043875,
      },
      "helm": undefined,
      "weapon": "Volcano",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7620.635429687501,
        "chargeTime": 0.5690666666666666,
        "comboDamage": 29720.478175781256,
        "dps": 15093.68813098317,
        "modifiedDamage": 29720.478175781256,
      },
      "helm": undefined,
      "weapon": "Caldera",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 4623.756328125,
        "chargeTime": 0.5531428571428572,
        "comboDamage": 33667.38973556888,
        "dps": 14353.366671386055,
        "modifiedDamage": 18032.649679687504,
      },
      "helm": undefined,
      "weapon": "Slasher",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 7021.259609375,
        "chargeTime": 0.5690666666666666,
        "comboDamage": 27382.912476562502,
        "dps": 13906.54412068112,
        "modifiedDamage": 27382.912476562502,
      },
      "helm": undefined,
      "weapon": "Tumulus",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 3214.31982421875,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 39708.04851936915,
        "dps": 13815.999095667958,
        "modifiedDamage": 12535.847314453125,
      },
      "helm": undefined,
      "weapon": "Musk Stick",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Castellanos",
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.4,
        "baseDmg": 6165.008437500001,
        "chargeTime": 0.5690666666666666,
        "comboDamage": 24043.532906250002,
        "dps": 12210.62410596391,
        "modifiedDamage": 24043.532906250002,
      },
      "helm": undefined,
      "weapon": "Hornito",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 2802.2275390625,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 34617.273068167975,
        "dps": 12044.717160325912,
        "modifiedDamage": 10928.68740234375,
      },
      "helm": undefined,
      "weapon": "Battle Bamboo",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 3596.254921875,
        "chargeTime": 0.6065714285714285,
        "comboDamage": 30239.198697708005,
        "dps": 11646.019095265421,
        "modifiedDamage": 14025.394195312501,
      },
      "helm": undefined,
      "weapon": "War Hammer",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 3082.5042187500003,
        "chargeTime": 0.5531428571428572,
        "comboDamage": 22444.926490379254,
        "dps": 9568.91111425737,
        "modifiedDamage": 12021.766453125001,
      },
      "helm": undefined,
      "weapon": "Broadaxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 1813.2060546875,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 22399.411985285158,
        "dps": 7793.640515505001,
        "modifiedDamage": 7071.50361328125,
      },
      "helm": undefined,
      "weapon": "Cypress Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.9899552,
        "baseDmg": 2055.0028125,
        "chargeTime": 0.6065714285714285,
        "comboDamage": 17279.542112976,
        "dps": 6654.868054437383,
        "modifiedDamage": 8014.51096875,
      },
      "helm": undefined,
      "weapon": "Iron Hammer",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.645554,
        "baseDmg": 1895.62451171875,
        "chargeTime": 0.5709523809523809,
        "comboDamage": 12734.479422310547,
        "dps": 5745.29337327639,
        "modifiedDamage": 7392.935595703125,
      },
      "helm": undefined,
      "weapon": "Mythril Blade",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 2.3921580000000002,
        "baseDmg": 1236.27685546875,
        "chargeTime": 0.4819047619047619,
        "comboDamage": 15272.326353603517,
        "dps": 5313.845806026137,
        "modifiedDamage": 4821.479736328125,
      },
      "helm": undefined,
      "weapon": "Oaken Pole",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.7924664,
        "baseDmg": 1455.6269921875,
        "chargeTime": 0.5531428571428572,
        "comboDamage": 10598.993064901315,
        "dps": 4518.652470621536,
        "modifiedDamage": 5676.94526953125,
      },
      "helm": undefined,
      "weapon": "Handaxe",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Grand Armor",
      "dps": Object {
        "animationTime": 1.645554,
        "baseDmg": 1153.8583984375,
        "chargeTime": 0.5709523809523809,
        "comboDamage": 7751.422257058594,
        "dps": 3497.1350967769336,
        "modifiedDamage": 4500.04775390625,
      },
      "helm": undefined,
      "weapon": "Mythril Sword",
    },
    Object {
      "accessory": "Germinas Boots",
      "ammo": "Artemis Arrows",
      "armor": "Maximillian",
      "dps": Object {
        "animationTime": 1.6,
        "baseDmg": 1903.044724770642,
        "chargeTime": 0.6023809523809522,
        "comboDamage": 7681.640031536696,
        "dps": 3487.8797981031485,
        "modifiedDamage": 7421.874426605505,
      },
      "helm": "Steel Mask",
      "weapon": "Shortbow",
    },
    Object {
      "accessory": "Genji Gloves",
      "ammo": undefined,
      "armor": "Mirage Vest",
      "dps": Object {
        "animationTime": 1.2,
        "baseDmg": 112.890625,
        "chargeTime": 0.5458095238095237,
        "comboDamage": 519.52265625,
        "dps": 297.58266819186076,
        "modifiedDamage": 440.2734375,
      },
      "helm": "Green Beret",
      "weapon": "Bonebreaker",
    },
  ],
}
`;
